@@ -1,3 +1,13 @@
+Wed May 19 23:19:30 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb (disconnect): closes the socket of a Net::IMAP
+	  object only when it is not closed.  [ruby-dev:41350]
+
+Sun May  9 08:24:24 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb (disconnect): terminates @receiver_thread even if
+	  @sock.shutdown raises an exception.  [ruby-dev:34881]
+
 Sun May 16 22:17:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* eval.c (setup_exception): let SystemStackError#backtrace return an
